tests/baselines/reference/indexSignatureWithInitializer.errors.txt
==== tests/cases/compiler/indexSignatureWithInitializer.ts (4 errors) ====
    interface I {
        [x = '']: string;
         ~~~~~~
!!! error TS1020: Index signature parameter cannot have an initializer.
         ~~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
    }
    
    class C {
        [x = 0]: string
         ~~~~~
!!! error TS1020: Index signature parameter cannot have an initializer.
         ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
    }